--- a/Sales.API/appsettings.json
+++ b/Sales.API/appsettings.json
@@ -2,6 +2,11 @@
   "ConnectionStrings": {
     "localbd": "Data Source=(localdb)\\ProjectModels;Initial Catalog=Sales;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
+  "CountriesAPI": {
+    "urlBase": "https://api.countrystatecity.in",
+    "tokenName": "X-CSCAPI-KEY",
+    "tokenValue": "NUZicm9hR0FUb0oxUU5mck14NEY3cEFkcU9GR3VqdEhVOGZlODlIRQ=="
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
